--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,6 +7,7 @@ cssbeautifier==1.15.1
 djlint==1.34.1
 EditorConfig==0.12.4
 Flask==3.0.2
+gunicorn==21.2.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 importlib_metadata==7.0.2
@@ -16,6 +17,7 @@ jmespath==1.0.1
 jsbeautifier==1.15.1
 json5==0.9.23
 MarkupSafe==2.1.5
+packaging==24.0
 pathspec==0.12.1
 python-dateutil==2.9.0.post0
 PyYAML==6.0.1
